# cltrier_promptClassify

./: LICENSE  Makefile  README.md  pyproject.toml
examples/: config.toml  data.csv  pipeline.ipynb
examples/results/: classify.flan-t5-small.base.csv  classify.flan-t5-small.trans.csv  classify.mt0-small.base.csv  classify.mt0-small.trans.csv  eval.flan-t5-small.base.csv
src/cltrier_promptClassify/: __init__.py  __main__.py  dataset.py  util.py
src/cltrier_promptClassify/integrations/: __init__.py  base.py  huggingface.py
tests/: test_dataset.py  test_integration.py  test_pipeline.py
