[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cltrier_promptClassify"
authors = [
    { name = "Simon Münker", email = "muenker@uni-trier.com" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0.0",
    "pyarrow>=13.0.0",
    "tqdm>=4.66.0",
    "numpy>=1.25.0",
    "pandas>=2.1.0",
    "torch>=2.0.0",
    "transformers>=4.32.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
]
dynamic = ["version", "description"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
